# sample-python-new

./: Pipfile  Pipfile1  action.yml  get_version_string.py  pyproject.toml  requirements.txt
.github/workflows/: 1157-1.yml  1157.yml  1167.yml  Pythontests.yml  cache node.yml  compositeaction.yml  featute530.yml  issue436.yml  issue585.yml  issue641.yml  issue748.yml  issue940.yml  issue942.yml  issue960.yml  poetrytesting.yml  prziptesting.yml  pyproject.toml  test1.yml  testing-pip.yml  testingPR.yml  testingmac.yml
