[tool.poetry]
name = "<name>"
version = "0.1.1"
description = "<description>"
authors = ["firstName lastName <you@email.com>"]
readme = "README.md"
packages = [{include = "src/module"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.22.3"
tqdm = {version = "4.66.4", optional = true }
pandas = "^2.2.2"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pylint = "2.15.9"
black = "22.12.0"
isort = "^5.11.4"
pyright = "^1.1.362"


[tool.poetry.group.test]
optional=true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"